--- a/builds/angular/partials/list.html
+++ b/builds/angular/partials/list.html
@@ -23,12 +23,13 @@
 	
 	<ul class="artistlist">
 		<li class="artist cf" ng-repeat="item in artists | filter:query | orderBy:artistOrder:direction">
+			<a href="#/details/{{artists.indexOf(item)}}">
 			<img ng-src="images/{{item.shortname}}_tn.jpg" alt="Phote of {{item.name}}">
 			<div class="info">
 				<h2>{{item.name}}</h2>
 				<h3>{{item.reknown}}</h3>
-
 			</div>
+			</a>
 		</li>
 	</ul>
 </section>
